Comment improvements.
(from subversion r6740)